# truealgebra

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/source/: '  conf.py  index.rst  intro.rst  std.rst  stdcas.rst
docs/source/core/: expressions.rst  index.rst  overview.rst  rules.rst  settings.rst
docs/source/tasympy/: frontend.rst  index.rst  intro.rst  numbers.rst  predicate.rst
truealgebra/: __init__.py  stdcas.py
truealgebra/common/: commonsettings.py  eval_basics.py  eval_commassoc.py  settings_function.py  setup_func.py  simplify.py  units.py  unparse.py  utility.py
truealgebra/common/tests/: test_simplify.py  test_units.py
truealgebra/core/: abbrv.py  commassoc_rules.py  constants.py  err.py  expression.py  expressions.py  frontend.py  naturalrules.py  oldparse.py  parse.py  postfactory.py  represent_abstract.py  rule.py  rulebase.py  rules.py  setsettings.py  settings.py  translate.py  unparse.py
truealgebra/core/tests/: common_test_info.py  conftest.py  ipython_three_parse.py  test_comm_assoc_match.py  test_constants.py  (+19 more)
truealgebra/std/: __init__.py  constr_functs.py  diff.py  eqnmath.py  eval.py  eval_commassoc.py  evalnum.py  identities.py  makeforms.py  newmakeforms.py  oldevalnum.py  predicate.py  set_stdsettings.py  settings_functions.py  setup.py  setup_func.py  simplify.py  std_settings.py  stdsettings_function.py  unit.py  unit_tools.py  unparse.py
truealgebra/tasympy/: __init__.py  calculas.py  evalnum.py  predicate.py  setup.py  setup_func.py  sympynumber.py  sympytota.py  tatosympy.py  unparse.py  utility.py
(+10 files in other folders)
